# docs/swagger.json
@@ -997,20 +997,11 @@
         "controller.PayOrderRequest": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
                 "method": {
                     "type": "string"
                 },
                 "order_id": {
                     "type": "integer"
-                },
-                "paid_at": {
-                    "type": "string"
-                },
-                "payment_no": {
-                    "type": "string"
                 }
             }
         },
